--- a/public/stylesheet/styling.css
+++ b/public/stylesheet/styling.css
@@ -35,7 +35,32 @@ border-radius:1rem;
 filter: drop-shadow(0 0 10px #000000);
 /* margin-top:2rem; */
 }
+.dropdown-menu {
+    background-color: #333333;
 
+}
+
+.dropdown-menu li > a {
+    color: #FFF;
+    padding: 6px 20px;
+    transition: padding .5s ease-in-out
+}
+.dropdown-menu li > a:hover {
+   background-color: #31b0d5;
+   color: #FFF;
+   padding-left: 25px;
+}
+.carousel-indicators li{
+  height:12px;
+  width:12px;
+  opacity:0.6;
+  background:transparent;
+  border:1.5px solid white;
+  border-radius: 50%;
+}
+.carousel-indicators .active{
+  background: white;
+}
 @media (max-width:1000px)and (min-width:430px){
 .carimg{
 height:19rem;
