--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,6 +10,26 @@
   <!--google font-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet/styling.css">
+
+<style>
+@keyframes boing {
+    0% {
+        transform: scale(1.2);
+    }
+    40% {
+        transform: scale(.6);
+    }
+    60% {
+        transform: scale(1.2);
+    }
+    80% {
+        transform: scale(.8);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+</style>
 </head>
 <body>
 
@@ -110,9 +130,7 @@
                <!-- <li><a class="dropdown-item"  href="#"></a></li> -->
              </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/donate">Donate</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="/register">Signup</a>
           </li>
@@ -131,13 +149,18 @@
   <!-- carousel-->
 
   <div class="container-fluid imgbox">
-    <div class="container">
+    <!-- <div class="container"> -->
 
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
+      <div id="carouselExampleControls" class="carousel slide hidden-xs" data-ride="carousel" data-interval="2500">
+        <ol class="carousel-indicators">
+    <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleControls" data-slide-to="1"></li>
+    <li data-target="#carouselExampleControls" data-slide-to="2"></li>
+  </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="carimg" src="./img/download 3.jpg"></img>
-            <!-- <h1 class="cardet">"Our main Goal is to Unify all Student and form a platform for excahnge of Ideas and Info. "</h1> -->
+           <!-- <h1 class="cardet">"Our main Goal is to Unify all Student and form a platform for excahnge of Ideas and Info. "</h1> -->
           </div>
           <div class="carousel-item">
             <img class="carimg" src="./img/download 1.jpg"></img>
@@ -145,20 +168,20 @@
           </div>
           <div class="carousel-item">
             <img class="carimg" src="./img/download.jpg"></img>
-            <!-- <h1 class="cardet">"A strong DataBase is available with maximum Security and Privacy."</h1> -->
+           <!-- <h1 class="cardet">"A strong DataBase is available with maximum Security and Privacy."</h1> -->
           </div>
         </div>
 
-      </div>
+      <!-- </div> -->
     </div>
-    <a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
+    <!-- <a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next carbtn" href="#carouselExampleControls" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </a> -->
   </div>
 
   <!--updates-->
@@ -219,15 +242,6 @@
 
 The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
 </div>
-<script type="text/javascript">
-// $(document).ready(function(){
-//     $(".dropdown, .btn-group").hover(function(){
-//         var dropdownMenu = $(this).children(".dropdown-menu");
-//         if(dropdownMenu.is(":visible")){
-//             dropdownMenu.parent().toggleClass("open");
-//         }
-//     });
-// });
-</script></body>
+</body>
 
 </html>
