--- a/public/stylesheet/styling.css
+++ b/public/stylesheet/styling.css
@@ -23,15 +23,16 @@ font-family: "Montserrat";
 }
 
 .imgbox{
-background-color:#cce0ff;
+/* background-color:#cce0ff; */
 position:relative;
 /* top:2.5rem; */
 text-align:center;
+padding: 0;
 }
 .carimg{
-height:18rem;
-width:67rem;
-border-radius:1rem;
+height:24rem;
+width:100%;
+/* border-radius:1rem; */
 filter: drop-shadow(0 0 10px #000000);
 /* margin-top:2rem; */
 }
