--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -132,7 +132,7 @@
   <!-- carousel-->
 
   <div class="container-fluid imgbox">
-    <div class="container">
+    <!-- <div class="container"> -->
 
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
         <ol class="carousel-indicators">
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-      </div>
+      <!-- </div> -->
     </div>
     <!-- <a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
