--- a/views/reunion.ejs
+++ b/views/reunion.ejs
@@ -131,8 +131,8 @@
 
   <!-- carousel-->
 
-  <div class="container-fluid imgbox">
-    <div class="container">
+  <div class="container-fluid imgbox" style="padding:0;">
+    <!-- <div class="container"> -->
 
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2500">
         <ol class="carousel-indicators">
@@ -156,7 +156,7 @@
         </div>
 
       </div>
-    </div>
+    <!-- </div> -->
     <!-- <a class="carousel-control-prev carbtn" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
