--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <% include partials/header %>
 
 <% if(currentUser && currentUser.isAdmin) { %>
-<h1> You are Admin !!</h1>
+    <h1>Welcome ADMIN !!</h1>
 
-<% } %>
+<% } %> 
 
 <div class="container">
 
@@ -16,8 +16,6 @@
                 <h2> View our alumnis </h2>
             </center>
             <p></p>
-
-
             <p>
                 <a class="btn btn-primary btn-large" href="/alumni/new">ADD YOUR PROFILE</a>
             </p>
