--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -126,13 +126,21 @@
                <!-- <li><a class="dropdown-item"  href="#"></a></li> -->
              </ul>
           </li>
-
+                    <%  if(!currentUser) {  %>
+                        <li class="nav-item"> <a class="nav-link" href='/login'>Login</a></li>
+                        <li class="nav-item"> <a class="nav-link" href='/register'>Sign Up</a></li>
+                        <% } else{ %>
+                            <li class="nav-item"> <a class="nav-link" href="#">  Signed in as: <%= currentUser.username %> </a>
+                            </li>
+                            <li class="nav-item"> <a class="nav-link" href='/logout'>Logout</a></li>
+                            <%  } %>
+<!-- 
           <li class="nav-item">
             <a class="nav-link" href="/register">Signup</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link" href="#more">More</a>
           </li> -->
