--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,9 @@
                 <a class="btn btn-primary btn-large" href="/alumni/search">SEARCH ALUMNI</a>
             </p>
 
+            <p>
+                <a class="btn btn-primary btn-large" href="/compose"> Post Notice</a>
+            </p>
         </div>
     </header>
 
