--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -1,58 +1,4 @@
-<!-- 
 <!DOCTYPE html>
-
-<html>
-
-<head>
-    <title>Alumini Portal</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="../../public/stylesheet/main.css">
-</head> --> -->
-<!-- 
-<body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">ALUMNI CONNECT</a>
-            </div>
-
-
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <%  console.log(currentUser);  %>
-
-                        <%  if(!currentUser) {  %>
-                            <li> <a href='/login'>Login</a></li>
-                            
-                            <li> <a href='/register'>Sign Up</a></li>
-                            <% } else{ %>
-                                <li> <a href='/chat'>Group Chat</a></li>
-                                <li> <a href="#">  Signed in as: <%= currentUser.username %> </a>
-                                </li>
-
-                                <li> <a href='/logout'>Logout</a></li>
-                                <%  } %>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container">
-        
-        <% if(error && error.length > 0){ %>
-            <div class="alert alert-danger" role="alert">
-                <%= error %>
-            </div>
-        <% } %>
-        <% if(success && success.length > 0){ %>
-            <div class="alert alert-success" role="alert">
-                <%= success %>
-            </div>
-        <% } %>
-    </div> -->
-
-    <!DOCTYPE html>
 <html>
 <head>
     <title>Alumini Portal</title>
@@ -84,19 +30,13 @@
                             <li>    <a href="/alumni"><span class="glyphicon glyphicon-home"></span> Home</a>    </li>
                             <li>    <a href="/about"><span class="glyphicon glyphicon-info-sign"></span> About</a>    </li>
                             <li>    <a href="/blogs"><span class="glyphicon glyphicon-info-sign"></span> Blog</a>    </li>
+                            <li>    <a href="/blogs/new" class="item">New Post</a>   </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <% if(!currentUser){ %>
                                 <li><a href="/login"><span class="glyphicon glyphicon-log-in"  aria-hidden="true" ></span> Login</a></li>
                                 <li><a href="/register"><i class="material-icons md-18">person_add</i> Sign Up</a></li>
-                            <% } else { %>
                                 <li>    <a href="/chat"><span class="glyphicon glyphicon-info-sign"></span> Group Chat</a>    </li>
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <span class="glyphicon glyphicon-user"></span>
-                                        <strong><%=currentUser.username%></strong>
-                                        <span class="glyphicon glyphicon-chevron-down"></span>
-                                    </a>
                                     <ul role="menu" class="dropdown-menu">
                                         <li>
                                             <div class="navbar-login">
@@ -106,11 +46,6 @@
                                                             <span class="glyphicon glyphicon-user icon-size"></span>
                                                         </p>
                                                     </div>
-                                                    <div class="col-lg-8">
-                                                        <p class="text-left"><strong><%=currentUser.username%></strong></p>
-                                                        <p class="text-left small"><%=currentUser.email%></p>
-                                                        <p class="text-left">
-                                                    </div>
                                                 </div>
                                             </div>
                                         </li>
@@ -119,22 +54,7 @@
                                         <li><a class="hov"  href="/logout">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
                                     </ul>
                                 </li>
-                            <% } %>
                         </ul>
                     </div>
                 </div>
             </nav>
-        
-            <div class="container">
-        
-                <% if(error && error.length > 0){ %>
-                    <div class="alert alert-danger" role="alert">
-                        <%= error %>
-                    </div>
-                <% } %>
-                <% if(success && success.length > 0){ %>
-                    <div class="alert alert-success" role="alert">
-                        <%= success %>
-                    </div>
-                <% } %>
-            </div>
