--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -369,6 +369,10 @@
     </head>
     <body>
 
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v5.0"></script>
+
         <!--================Header Menu Area =================-->
         <header class="header_area">
            	<div class="top_menu row m0">
@@ -822,24 +826,30 @@
                   <p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in front of their desktops, while delivery</p>
                 </div>
               </div>
-              <div id="fbfeed" class="col-lg-3 col-md-3 col-sm-12" style="height:100%;">
-                <div class="fb-page" data-href="https://www.facebook.com/nitpplacement/" data-tabs="timeline" data-width="600" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                  <blockquote cite="https://www.facebook.com/nitpplacement/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/nitpplacement/">NIT PATNA PLACEMENT UPDATES</a></blockquote>
+              <div class="col-lg-4 col-md-4">
+                <div class="l_blog_item">
+                  <img class="img-fluid" src="img/latest-blog/l-blog-2.jpg" alt="">
+                  <a class="date" href="#">25 October, 2018 | By Mark Wiens</a>
+                  <a href="#">
+                    <h4>Addiction When Gambling Becomes A Problem</h4>
+                  </a>
+                  <p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys spend hours in front
+                    of their desktops, while delivery</p>
                 </div>
               </div>
-
+              
 
 
             </div>
-            <div class="row">
-              <div class="col-lg-4 col-md-3 col-sm-12" style="height:100%;">
-                <div>
-                  <a class="twitter-timeline" href="https://twitter.com/goa?ref_src=twsrc%5Etfw">Tweets by goa</a>
-                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-              </div>
 
-
+          </br>
+        </br>
+            
+            <div class="fb-page" data-href="https://www.facebook.com/nitpplacement" data-tabs="timeline" data-width=""
+              data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+              data-show-facepile="true">
+              <blockquote cite="https://www.facebook.com/nitpplacement" class="fb-xfbml-parse-ignore"><a
+                  href="https://www.facebook.com/nitpplacement">NIT PATNA</a></blockquote>
             </div>
 
           </div>
